[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Lens <let4ik228guuu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.4.1"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
